syntax = "proto3";

package apply_job;

option go_package = "./pb";
import "google/protobuf/timestamp.proto";


message ApplyJobReq{
    uint32 job_id = 1;
}

message ApplyJobRes{
    uint32 job_id = 1;
    string status = 2;
    string message = 3;
    google.protobuf.Timestamp applied_at = 4;
}
message RecordsReq{

}

message Record{
    uint32 id = 1;
    google.protobuf.Timestamp created_at = 2;
    google.protobuf.Timestamp updated_at = 3;
    google.protobuf.Timestamp deleted_at = 4;
    uint32 user_id = 5;
    uint32 job_id = 6;
    google.protobuf.Timestamp applied_at = 7;
}

message RecordsRes{
    repeated Record records = 1;
}

service ApplyJobService{
    rpc GetAllRecords(RecordsReq) returns(RecordsRes);
    rpc ApplyJob(ApplyJobReq) returns (ApplyJobRes);
}